# pulson

./: .envrc  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  README_old.md  build.rs  codegrab-output.md  devbox.json  run.sh  test.db  test_enhanced_save_images.sh  test_image_functionality.sh  test_limbo.rs  test_save_images_flag.sh
.github/workflows/: release.yml
pulson/: Cargo.toml  build.rs  libconfig.rlib  libdevice_routes.rlib
pulson-ui/: Cargo.toml  README.md  test-pwa.sh
pulson-ui/src/: lib.rs
pulson-ui/src/components/: dashboard.rs  event_visualization.rs  image_visualization.rs  inline_map.rs  mod.rs  pulse_visualization.rs  sensor_visualization.rs  settings.rs  trigger_visualization.rs
pulson-ui/static/: index.html  manifest.json  offline.html  pwa-manager.js  pwa-test.html  style.css  sw.js  test-map.html  test-wasm-map.html
pulson-ui/static/styles/: auth.css  base.css  dashboard.css  event_visualization.css  image_visualization.css  inline_map.css  mobile.css  pulse_visualization.css  pwa.css  sensor_visualization.css  settings.css  trigger_visualization.css
pulson/src/: cli.rs  main.rs
pulson/src/database/: devices.rs  mod.rs  password.rs  schema.rs  sessions.rs  users.rs
pulson/src/logic/: config.rs  mod.rs  serve.rs  types.rs
pulson/src/logic/client/: account.rs  config.rs  data.rs  device.rs  list.rs  mod.rs  ping.rs  pulse.rs  url_utils.rs
pulson/src/logic/serve/: auth.rs  database.rs  db_types.rs  mod.rs  ui.rs
pulson/src/logic/serve/api/: account_routes.rs  device_routes.rs  mod.rs  password_utils.rs  token_service.rs  user_management.rs
pulson_db/: db  snap.000000000000009B
src/: cli.rs  main.rs
src/logic/: account.rs  list.rs  mod.rs  ping.rs  prune.rs  serve.rs  types.rs
