[package]
name = "pulson-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # for wasm-bindgen

[dependencies]
yew = { version = "0.20", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"
gloo-storage = "0.3"
yew-router = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Window","Document"] }

