[package]
name = "pulson"
version = "1.0.2"
authors = ["Trim Bresilla <trim.bresilla@gmail.com>"]
description = "realtime system/robot monitoring and tracing"
edition = "2021"
license = "MIT"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
daemonize = "0.5"
anyhow = "1.0"
shellexpand = "2.1"
directories = "4.0"
uuid        = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
colored = "2.0"
bcrypt = "0.15"
toml = "0.8"

rust-embed = "6.3"
mime_guess = "2.0"